// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`SelectField renders correctly with default props 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Please select an option.",
                  ],
                  "props": {
                    "numberOfLines": 1,
                    "style": {
                      "color": "#1C1C1C",
                      "flex": 1,
                      "fontFamily": "text",
                      "fontSize": 16,
                      "minWidth": 0,
                      "paddingRight": 8,
                    },
                    "testID": "text_input",
                  },
                  "type": "Text",
                },
              ],
              "props": {
                "aria-role": "button",
                "disabled": false,
                "onPress": [Function],
                "style": {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "minHeight": 40,
                  "paddingHorizontal": 8,
                  "width": "100%",
                },
                "testID": "web_picker",
              },
              "type": "Pressable",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "aria-role": "button",
                    "onPress": [Function],
                    "style": {
                      "flex": 1,
                      "zIndex": 0,
                    },
                    "testID": "web_dropdown_backdrop",
                  },
                  "type": "Pressable",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "autoFocus": true,
                            "onChangeText": [Function: dispatchSetState],
                            "placeholder": "Search...",
                            "placeholderTextColor": "#686868",
                            "ref": {
                              "current": null,
                            },
                            "style": {
                              "borderColor": "#949494",
                              "borderRadius": 4,
                              "borderWidth": 1,
                              "color": "#1C1C1C",
                              "fontSize": 14,
                              "paddingHorizontal": 8,
                              "paddingVertical": 4,
                            },
                            "testID": "web_dropdown_search",
                            "value": "",
                          },
                          "type": "TextInput",
                        },
                      ],
                      "props": {
                        "style": {
                          "borderBottomColor": "#CDCDCD",
                          "borderBottomWidth": 1,
                          "paddingHorizontal": 8,
                          "paddingVertical": 6,
                        },
                        "testID": undefined,
                      },
                      "type": "View",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Please select an option.",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "600",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_",
                          },
                          "type": "Pressable",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Option 1",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "400",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_opt1",
                          },
                          "type": "Pressable",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Option 2",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "400",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_opt2",
                          },
                          "type": "Pressable",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Option 3",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "400",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_opt3",
                          },
                          "type": "Pressable",
                        },
                      ],
                      "props": {
                        "keyboardShouldPersistTaps": "handled",
                        "onLayout": [Function],
                        "ref": {
                          "current": null,
                        },
                      },
                      "type": "ScrollView",
                    },
                  ],
                  "props": {
                    "style": {
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#949494",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "boxShadow": "0px 2px 8px rgba(0, 0, 0, 0.15)",
                      "left": 0,
                      "maxHeight": 300,
                      "minWidth": undefined,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 4,
                      "width": 0,
                      "zIndex": 1,
                    },
                    "testID": "web_dropdown_menu",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "animationType": "fade",
                "onRequestClose": [Function],
                "testID": "web_dropdown_modal",
                "transparent": true,
                "visible": false,
              },
              "type": "Modal",
            },
          ],
          "props": {
            "ref": {
              "current": null,
            },
            "style": [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderRadius": 4,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "minHeight": 40,
                "width": "100%",
              },
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#949494",
              },
              false,
            ],
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignSelf": "stretch",
          "minWidth": 0,
          "width": "100%",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "minWidth": 0,
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`SelectField renders with title 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        "Select an option",
      ],
      "props": {
        "style": {
          "color": "#1C1C1C",
          "fontSize": 14,
          "fontWeight": 600,
          "lineHeight": 22.4,
        },
      },
      "type": "Text",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Please select an option.",
                  ],
                  "props": {
                    "numberOfLines": 1,
                    "style": {
                      "color": "#1C1C1C",
                      "flex": 1,
                      "fontFamily": "text",
                      "fontSize": 16,
                      "minWidth": 0,
                      "paddingRight": 8,
                    },
                    "testID": "text_input",
                  },
                  "type": "Text",
                },
              ],
              "props": {
                "aria-role": "button",
                "disabled": false,
                "onPress": [Function],
                "style": {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "minHeight": 40,
                  "paddingHorizontal": 8,
                  "width": "100%",
                },
                "testID": "web_picker",
              },
              "type": "Pressable",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "aria-role": "button",
                    "onPress": [Function],
                    "style": {
                      "flex": 1,
                      "zIndex": 0,
                    },
                    "testID": "web_dropdown_backdrop",
                  },
                  "type": "Pressable",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "autoFocus": true,
                            "onChangeText": [Function: dispatchSetState],
                            "placeholder": "Search...",
                            "placeholderTextColor": "#686868",
                            "ref": {
                              "current": null,
                            },
                            "style": {
                              "borderColor": "#949494",
                              "borderRadius": 4,
                              "borderWidth": 1,
                              "color": "#1C1C1C",
                              "fontSize": 14,
                              "paddingHorizontal": 8,
                              "paddingVertical": 4,
                            },
                            "testID": "web_dropdown_search",
                            "value": "",
                          },
                          "type": "TextInput",
                        },
                      ],
                      "props": {
                        "style": {
                          "borderBottomColor": "#CDCDCD",
                          "borderBottomWidth": 1,
                          "paddingHorizontal": 8,
                          "paddingVertical": 6,
                        },
                        "testID": undefined,
                      },
                      "type": "View",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Please select an option.",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "600",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_",
                          },
                          "type": "Pressable",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Option 1",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "400",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_opt1",
                          },
                          "type": "Pressable",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Option 2",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "400",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_opt2",
                          },
                          "type": "Pressable",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Option 3",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "400",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_opt3",
                          },
                          "type": "Pressable",
                        },
                      ],
                      "props": {
                        "keyboardShouldPersistTaps": "handled",
                        "onLayout": [Function],
                        "ref": {
                          "current": null,
                        },
                      },
                      "type": "ScrollView",
                    },
                  ],
                  "props": {
                    "style": {
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#949494",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "boxShadow": "0px 2px 8px rgba(0, 0, 0, 0.15)",
                      "left": 0,
                      "maxHeight": 300,
                      "minWidth": undefined,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 4,
                      "width": 0,
                      "zIndex": 1,
                    },
                    "testID": "web_dropdown_menu",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "animationType": "fade",
                "onRequestClose": [Function],
                "testID": "web_dropdown_modal",
                "transparent": true,
                "visible": false,
              },
              "type": "Modal",
            },
          ],
          "props": {
            "ref": {
              "current": null,
            },
            "style": [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderRadius": 4,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "minHeight": 40,
                "width": "100%",
              },
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#949494",
              },
              false,
            ],
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignSelf": "stretch",
          "minWidth": 0,
          "width": "100%",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "minWidth": 0,
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`SelectField renders with selected value 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Option 2",
                  ],
                  "props": {
                    "numberOfLines": 1,
                    "style": {
                      "color": "#1C1C1C",
                      "flex": 1,
                      "fontFamily": "text",
                      "fontSize": 16,
                      "minWidth": 0,
                      "paddingRight": 8,
                    },
                    "testID": "text_input",
                  },
                  "type": "Text",
                },
              ],
              "props": {
                "aria-role": "button",
                "disabled": false,
                "onPress": [Function],
                "style": {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "minHeight": 40,
                  "paddingHorizontal": 8,
                  "width": "100%",
                },
                "testID": "web_picker",
              },
              "type": "Pressable",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "aria-role": "button",
                    "onPress": [Function],
                    "style": {
                      "flex": 1,
                      "zIndex": 0,
                    },
                    "testID": "web_dropdown_backdrop",
                  },
                  "type": "Pressable",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "autoFocus": true,
                            "onChangeText": [Function: dispatchSetState],
                            "placeholder": "Search...",
                            "placeholderTextColor": "#686868",
                            "ref": {
                              "current": null,
                            },
                            "style": {
                              "borderColor": "#949494",
                              "borderRadius": 4,
                              "borderWidth": 1,
                              "color": "#1C1C1C",
                              "fontSize": 14,
                              "paddingHorizontal": 8,
                              "paddingVertical": 4,
                            },
                            "testID": "web_dropdown_search",
                            "value": "",
                          },
                          "type": "TextInput",
                        },
                      ],
                      "props": {
                        "style": {
                          "borderBottomColor": "#CDCDCD",
                          "borderBottomWidth": 1,
                          "paddingHorizontal": 8,
                          "paddingVertical": 6,
                        },
                        "testID": undefined,
                      },
                      "type": "View",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Please select an option.",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "400",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_",
                          },
                          "type": "Pressable",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Option 1",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "400",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_opt1",
                          },
                          "type": "Pressable",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Option 2",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "600",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_opt2",
                          },
                          "type": "Pressable",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Option 3",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "400",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_opt3",
                          },
                          "type": "Pressable",
                        },
                      ],
                      "props": {
                        "keyboardShouldPersistTaps": "handled",
                        "onLayout": [Function],
                        "ref": {
                          "current": null,
                        },
                      },
                      "type": "ScrollView",
                    },
                  ],
                  "props": {
                    "style": {
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#949494",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "boxShadow": "0px 2px 8px rgba(0, 0, 0, 0.15)",
                      "left": 0,
                      "maxHeight": 300,
                      "minWidth": undefined,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 4,
                      "width": 0,
                      "zIndex": 1,
                    },
                    "testID": "web_dropdown_menu",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "animationType": "fade",
                "onRequestClose": [Function],
                "testID": "web_dropdown_modal",
                "transparent": true,
                "visible": false,
              },
              "type": "Modal",
            },
          ],
          "props": {
            "ref": {
              "current": null,
            },
            "style": [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderRadius": 4,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "minHeight": 40,
                "width": "100%",
              },
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#949494",
              },
              false,
            ],
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignSelf": "stretch",
          "minWidth": 0,
          "width": "100%",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "minWidth": 0,
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`SelectField renders with custom placeholder 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Choose one...",
                  ],
                  "props": {
                    "numberOfLines": 1,
                    "style": {
                      "color": "#1C1C1C",
                      "flex": 1,
                      "fontFamily": "text",
                      "fontSize": 16,
                      "minWidth": 0,
                      "paddingRight": 8,
                    },
                    "testID": "text_input",
                  },
                  "type": "Text",
                },
              ],
              "props": {
                "aria-role": "button",
                "disabled": false,
                "onPress": [Function],
                "style": {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "minHeight": 40,
                  "paddingHorizontal": 8,
                  "width": "100%",
                },
                "testID": "web_picker",
              },
              "type": "Pressable",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "aria-role": "button",
                    "onPress": [Function],
                    "style": {
                      "flex": 1,
                      "zIndex": 0,
                    },
                    "testID": "web_dropdown_backdrop",
                  },
                  "type": "Pressable",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "autoFocus": true,
                            "onChangeText": [Function: dispatchSetState],
                            "placeholder": "Search...",
                            "placeholderTextColor": "#686868",
                            "ref": {
                              "current": null,
                            },
                            "style": {
                              "borderColor": "#949494",
                              "borderRadius": 4,
                              "borderWidth": 1,
                              "color": "#1C1C1C",
                              "fontSize": 14,
                              "paddingHorizontal": 8,
                              "paddingVertical": 4,
                            },
                            "testID": "web_dropdown_search",
                            "value": "",
                          },
                          "type": "TextInput",
                        },
                      ],
                      "props": {
                        "style": {
                          "borderBottomColor": "#CDCDCD",
                          "borderBottomWidth": 1,
                          "paddingHorizontal": 8,
                          "paddingVertical": 6,
                        },
                        "testID": undefined,
                      },
                      "type": "View",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Choose one...",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "600",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_",
                          },
                          "type": "Pressable",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Option 1",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "400",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_opt1",
                          },
                          "type": "Pressable",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Option 2",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "400",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_opt2",
                          },
                          "type": "Pressable",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Option 3",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "400",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_opt3",
                          },
                          "type": "Pressable",
                        },
                      ],
                      "props": {
                        "keyboardShouldPersistTaps": "handled",
                        "onLayout": [Function],
                        "ref": {
                          "current": null,
                        },
                      },
                      "type": "ScrollView",
                    },
                  ],
                  "props": {
                    "style": {
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#949494",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "boxShadow": "0px 2px 8px rgba(0, 0, 0, 0.15)",
                      "left": 0,
                      "maxHeight": 300,
                      "minWidth": undefined,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 4,
                      "width": 0,
                      "zIndex": 1,
                    },
                    "testID": "web_dropdown_menu",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "animationType": "fade",
                "onRequestClose": [Function],
                "testID": "web_dropdown_modal",
                "transparent": true,
                "visible": false,
              },
              "type": "Modal",
            },
          ],
          "props": {
            "ref": {
              "current": null,
            },
            "style": [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderRadius": 4,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "minHeight": 40,
                "width": "100%",
              },
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#949494",
              },
              false,
            ],
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignSelf": "stretch",
          "minWidth": 0,
          "width": "100%",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "minWidth": 0,
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`SelectField renders disabled state 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Please select an option.",
                  ],
                  "props": {
                    "numberOfLines": undefined,
                    "style": {
                      "color": "#686868",
                      "flex": 1,
                      "fontFamily": "text",
                      "fontSize": 16,
                      "minWidth": 0,
                      "paddingRight": 8,
                    },
                    "testID": "text_input",
                  },
                  "type": "Text",
                },
              ],
              "props": {
                "aria-role": "button",
                "disabled": true,
                "onPress": [Function],
                "style": {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "minHeight": 40,
                  "paddingHorizontal": 8,
                  "width": "100%",
                },
                "testID": "web_picker",
              },
              "type": "Pressable",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "aria-role": "button",
                    "onPress": [Function],
                    "style": {
                      "flex": 1,
                      "zIndex": 0,
                    },
                    "testID": "web_dropdown_backdrop",
                  },
                  "type": "Pressable",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "autoFocus": true,
                            "onChangeText": [Function: dispatchSetState],
                            "placeholder": "Search...",
                            "placeholderTextColor": "#686868",
                            "ref": {
                              "current": null,
                            },
                            "style": {
                              "borderColor": "#949494",
                              "borderRadius": 4,
                              "borderWidth": 1,
                              "color": "#1C1C1C",
                              "fontSize": 14,
                              "paddingHorizontal": 8,
                              "paddingVertical": 4,
                            },
                            "testID": "web_dropdown_search",
                            "value": "",
                          },
                          "type": "TextInput",
                        },
                      ],
                      "props": {
                        "style": {
                          "borderBottomColor": "#CDCDCD",
                          "borderBottomWidth": 1,
                          "paddingHorizontal": 8,
                          "paddingVertical": 6,
                        },
                        "testID": undefined,
                      },
                      "type": "View",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Please select an option.",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "600",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_",
                          },
                          "type": "Pressable",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Option 1",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "400",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_opt1",
                          },
                          "type": "Pressable",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Option 2",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "400",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_opt2",
                          },
                          "type": "Pressable",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Option 3",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "400",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_opt3",
                          },
                          "type": "Pressable",
                        },
                      ],
                      "props": {
                        "keyboardShouldPersistTaps": "handled",
                        "onLayout": [Function],
                        "ref": {
                          "current": null,
                        },
                      },
                      "type": "ScrollView",
                    },
                  ],
                  "props": {
                    "style": {
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#949494",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "boxShadow": "0px 2px 8px rgba(0, 0, 0, 0.15)",
                      "left": 0,
                      "maxHeight": 300,
                      "minWidth": undefined,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 4,
                      "width": 0,
                      "zIndex": 1,
                    },
                    "testID": "web_dropdown_menu",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "animationType": "fade",
                "onRequestClose": [Function],
                "testID": "web_dropdown_modal",
                "transparent": true,
                "visible": false,
              },
              "type": "Modal",
            },
          ],
          "props": {
            "ref": {
              "current": null,
            },
            "style": [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderRadius": 4,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "minHeight": 40,
                "width": "100%",
              },
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#949494",
              },
              {
                "backgroundColor": "#CDCDCD",
              },
            ],
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignSelf": "stretch",
          "minWidth": 0,
          "width": "100%",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "minWidth": 0,
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`SelectField renders with requireValue (no clear option) 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Option 1",
                  ],
                  "props": {
                    "numberOfLines": 1,
                    "style": {
                      "color": "#1C1C1C",
                      "flex": 1,
                      "fontFamily": "text",
                      "fontSize": 16,
                      "minWidth": 0,
                      "paddingRight": 8,
                    },
                    "testID": "text_input",
                  },
                  "type": "Text",
                },
              ],
              "props": {
                "aria-role": "button",
                "disabled": false,
                "onPress": [Function],
                "style": {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "minHeight": 40,
                  "paddingHorizontal": 8,
                  "width": "100%",
                },
                "testID": "web_picker",
              },
              "type": "Pressable",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "aria-role": "button",
                    "onPress": [Function],
                    "style": {
                      "flex": 1,
                      "zIndex": 0,
                    },
                    "testID": "web_dropdown_backdrop",
                  },
                  "type": "Pressable",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "autoFocus": true,
                            "onChangeText": [Function: dispatchSetState],
                            "placeholder": "Search...",
                            "placeholderTextColor": "#686868",
                            "ref": {
                              "current": null,
                            },
                            "style": {
                              "borderColor": "#949494",
                              "borderRadius": 4,
                              "borderWidth": 1,
                              "color": "#1C1C1C",
                              "fontSize": 14,
                              "paddingHorizontal": 8,
                              "paddingVertical": 4,
                            },
                            "testID": "web_dropdown_search",
                            "value": "",
                          },
                          "type": "TextInput",
                        },
                      ],
                      "props": {
                        "style": {
                          "borderBottomColor": "#CDCDCD",
                          "borderBottomWidth": 1,
                          "paddingHorizontal": 8,
                          "paddingVertical": 6,
                        },
                        "testID": undefined,
                      },
                      "type": "View",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Option 1",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "600",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_opt1",
                          },
                          "type": "Pressable",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Option 2",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "400",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_opt2",
                          },
                          "type": "Pressable",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Option 3",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#1C1C1C",
                                      "fontWeight": "400",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignSelf": "stretch",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "aria-role": "button",
                            "onLayout": [Function],
                            "onPress": [Function],
                            "style": [Function],
                            "testID": "web_dropdown_option_opt3",
                          },
                          "type": "Pressable",
                        },
                      ],
                      "props": {
                        "keyboardShouldPersistTaps": "handled",
                        "onLayout": [Function],
                        "ref": {
                          "current": null,
                        },
                      },
                      "type": "ScrollView",
                    },
                  ],
                  "props": {
                    "style": {
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#949494",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "boxShadow": "0px 2px 8px rgba(0, 0, 0, 0.15)",
                      "left": 0,
                      "maxHeight": 300,
                      "minWidth": undefined,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 4,
                      "width": 0,
                      "zIndex": 1,
                    },
                    "testID": "web_dropdown_menu",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "animationType": "fade",
                "onRequestClose": [Function],
                "testID": "web_dropdown_modal",
                "transparent": true,
                "visible": false,
              },
              "type": "Modal",
            },
          ],
          "props": {
            "ref": {
              "current": null,
            },
            "style": [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderRadius": 4,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "minHeight": 40,
                "width": "100%",
              },
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#949494",
              },
              false,
            ],
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignSelf": "stretch",
          "minWidth": 0,
          "width": "100%",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "minWidth": 0,
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;
